2000-02-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.h (Array::ArrayRep::qsort): Cast len to size_t.

2000-02-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-rl-edit.c, oct-rl-edit.h: New files for interface to GNU
	readline library.
	* Makefile.in: Add them to the appropriate lists.

	* oct-rl-hist.c, oct-rl-hist.h: New files for interface to GNU
	readline history library.
	* Makefile.in: Add them to the appropriate lists.

	* data-conv.cc (LS_DO_WRITE): Cast arg to ostream::write to char*.
	(LS_DO_READ): Likewise, for istream::read.
	(write_doubles): Likewise.
	(read_doubles): Likewise.

	* oct-env.cc (octave_env::do_polite_directory_format):
	Use operator== and substr method to do limited-length string
	comparison.

	* Array2-idx.h, Array-idx.h: Avoid shadowing warnings for idx.

	* Quad.h: Use do_integrate as name of pure virtual function.

	* base-de.h: Use tt instead of t as arg names.
	Add method with tcrit arg.

	* DAE.h, DAE.cc: Likewise, also xx for x.

	* DASSL.cc (dassl_fcn_ptr, dassl_jac_ptr): New typedefs.
	* LSODE.cc: lsode_fcn_ptr, lsode_jac_ptr): Ditto.
	* Quad.cc (quad_fcn_ptr): Ditto.
	* NLEqn.cc (hybrd1_fcn_ptr, hybrj1_fcn_ptr): Ditto.

	* oct-getopt.h, oct-getopt.c: New files for interface to getopt.
	* Makefile.in: Add them to the appropriate lists.

	* oct-kpse.h, oct-kpse.c: New files for interface to kpathsearch.
	* Makefile.in: Add them to the appropriate lists.

	* dMatrix.cc (write_int, read_int): No longer declared static.

	* CDiagMatrix.h: Delete decls for friend operators that are
	handled by MDiagArray2 class.  Move others outside class decl and
	strip friend status.
	* dDiagMatrix.h: Likewise.

	* MArray.h: Delete decls for friend operators inside class decl.
	* MArray2.h: Ditto.
	* MDiagArray2.h: Ditto.

	* MArray-defs.h (DO_VS_OP,, DO_SV_OP, DO_VV_OP, NEGV): Pass all
	necessary parameters.  Don't allocate memory in the macro.  Change
	all uses.

	* dMatrix.h (class Matrix): Delete `friend class' decls.