@@ -33,6 +33,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "oct-obj.h"
 #include "ov-base.h"
 #include "ov-base-mat.h"
+#include "pr-output.h"
 
 template <class MT>
 octave_value
